--- a/railo-java/railo-core/src/resource/context/admin/resources/language/de.xml
+++ b/railo-java/railo-core/src/resource/context/admin/resources/language/de.xml
@@ -12,7 +12,7 @@
 	<data key="services.update.type_auto">Automatisch</data>
 	<data key="services.update.removerun">Patches entfernen</data>
 	<data key="services.update.exedesc">Spielen Sie die aktuellsten Pacthes für Ihre Version ein. Nach einem erfolgten Update, müssen Sie sich neu in den Administrator einloggen.</data>
-	<data key="services.update.update">Für Ihre Version steht ein Patch zur Verfügung, Sie haben die Version {current} installiert, die aktuell verfügbare Version ist {avaiable}</data>
+	<data key="services.update.update">Für Ihre Version steht ein Patch zur Verfügung, Sie haben die Version {current} installiert, die aktuell verfügbare Version ist {available}</data>
 	<data key="services.update.infotitle">Info</data>
 	<data key="services.update.restartdesc">Hier können Sie Railo neu starten. Nach erfolgtem Restart werden bestehende Sitzungen entfernt. Sie müssen sich in den Administrator erneut einloggen.</data>
 	<data key="services.update.exe">Update ausführen</data>
