added UTF-8 BOM to files

--- a/railo-cfml/railo-admin/admin/resources/language/en.xml
+++ b/railo-cfml/railo-admin/admin/resources/language/en.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <language key="en" label="English">
 	<!-- this file contains the English/default language definition for the Admin March-2013 !-->
 
