--- a/railo-java/railo-core/src/resource/context/admin/resources/language/de.xml
+++ b/railo-java/railo-core/src/resource/context/admin/resources/language/de.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <language key="de" label="Deutsch">
 	<data key="admin.search.label">Durchsuche den Railo Administrator</data>
 	<data key="admin.search.desc">Suche nach Keywords im Railo Administrator</data>
